<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spe_degree_capture</name>
  <version>0.0.0</version>
  <description>Specific degree capture for UAV omnidirectional vision</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>opencv2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
